--- a/src/index.scss
+++ b/src/index.scss
@@ -18,3 +18,30 @@ code {
   font-family: Helvetica;
   font-size: 29px;
 }
+.content-wrap {
+  background: #ffffff;
+  box-shadow: 0px 1px 0px rgba(90, 97, 105, 0.11),
+    0px 2px 4px rgba(90, 97, 105, 0.12), 0px 5px 5px rgba(90, 97, 105, 0.06),
+    0px 3.5px 35px rgba(90, 97, 105, 0.1);
+  border-radius: 9px;
+}
+.content-wrap--header {
+  display: flex;
+  padding: 0px 20px;
+  justify-content: space-between;
+  align-items: center;
+  height: 60px;
+  border-bottom: solid 1px #e0e2e8;
+}
+.content-wrap--body {
+  padding: 15px 20px;
+}
+
+.content-wrap--footer {
+  display: flex;
+  padding: 0px 20px;
+  justify-content: center;
+  align-items: center;
+  height: 60px;
+  border-top: solid 1px #e0e2e8;
+}
