--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -9,6 +9,8 @@
   width: 100%;
   background: transparent;
   z-index: 0;
+  position: relative;
+  padding-bottom: 70px;
 }
 
 .sidebarHeader {
@@ -31,6 +33,28 @@
       font-size: 16px;
       font-family: Helvetica;
     }
+  }
+}
+
+footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 68px;
+  background-color: #fff;
+  z-index: 0;
+  padding: 0 27px;
+  position: absolute;
+  box-sizing: border-box;
+  bottom: 0;
+  width: 100%;
+  .footerLink {
+    color: #007bff;
+    text-decoration: none;
+  }
+  .copyRight {
+    color: #818ea3;
   }
 }
 
@@ -108,13 +132,21 @@ header {
   width: 270px;
 }
 .content {
+  padding: 27px 5px;
   width: 100%;
-  height: 100%;
-  padding: 27px;
+  height: calc(100% - 258px);
+  justify-content: center;
   box-sizing: border-box;
 }
 
 @media screen and (min-width: 768px) {
+  footer {
+    flex-direction: row;
+  }
+  .content {
+    padding: 27px 27px;
+  }
+
   header {
     height: 68px;
     .search {
