add: page create car

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -135,12 +135,11 @@ header {
 .content {
   padding: 27px 5px;
   width: 100%;
-  height: calc(100vh - 138px);
   justify-content: center;
   box-sizing: border-box;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 767px) {
   footer {
     flex-direction: row;
   }
@@ -180,6 +179,10 @@ header {
 }
 
 @media screen and (min-width: 1024px) {
+  .content {
+    height: calc(100vh - 138px);
+  }
+
   .mobileMenuList {
     display: none;
   }
