add: modals and page edit order

--- a/src/components/Select/Select.scss
+++ b/src/components/Select/Select.scss
@@ -38,9 +38,8 @@
 }
 @media screen and (min-width: '767px') {
   .MuiFormControl-root.CustomSelect {
-    min-width: 110px;
-    max-width: 110px;
+    min-width: 100%;
+    max-width: 100%;
     margin-right: 15px;
-    margin-bottom: 0px;
   }
 }
