add: jastify-content start for button, in edit order page

--- a/src/pages/OrderEdit/OrderEdit.scss
+++ b/src/pages/OrderEdit/OrderEdit.scss
@@ -1,4 +1,4 @@
-.edit-order-footer {
+.content-wrap--footer.edit-order-footer {
   justify-content: start;
   .edit-order-footer--btn-primary {
     margin-right: 15px;
