--- a/src/pages/OrderEdit/OrderEdit.scss
+++ b/src/pages/OrderEdit/OrderEdit.scss
@@ -11,6 +11,7 @@
 
 .additionalServices {
   margin-bottom: 15px;
+  display: table;
   .additionalServices--title {
     font-size: 13px;
     margin-top: 0;
