add: font-size for radio button

--- a/src/pages/OrderEdit/OrderEdit.scss
+++ b/src/pages/OrderEdit/OrderEdit.scss
@@ -25,6 +25,11 @@
     font-size: 12px;
   }
 }
+.LabelRadioBtn {
+  .MuiFormControlLabel-label {
+    font-size: 12px;
+  }
+}
 .checkboxPrimary {
   color: #007bff !important;
   padding: 0;
