--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -1,6 +1,11 @@
 .modal {
-  min-width: 300px;
+  min-width: 255px;
   max-width: 100%;
   padding: 20px;
-  // text-align: center;
+  box-sizing: border-box;
+}
+@media screen and (min-width: '767px') {
+  .modal {
+    min-width: 350px;
+  }
 }
