--- a/src/pages/AddCar/AddCar.module.scss
+++ b/src/pages/AddCar/AddCar.module.scss
@@ -137,8 +137,9 @@
 }
 .descriptCar {
   padding-right: 0;
+  margin-bottom: 13px;
   p {
-    color: #495057;
+    color: #121212;
     font-size: 11px;
     font-family: Helvetica;
     margin: 0;
@@ -153,6 +154,9 @@
     border: 1px solid #becad6;
     resize: none;
     outline: none;
+    text-indent: 10px;
+    color: #3d5170;
+    font-size: 11px;
   }
 }
 .addColor {
@@ -193,12 +197,13 @@
     content: '';
     display: block;
     position: absolute;
-    width: 13px;
-    height: 13px;
+    width: 18px;
+    height: 18px;
     border-radius: 2px;
-    background: url(../../assets/image/check.svg) #007bff;
+    background: url(../../assets/image/check.svg);
     background-repeat: no-repeat;
     background-position: center;
+    background-size: contain;
     left: 0;
   }
 }
