--- a/src/components/Select/Select.scss
+++ b/src/components/Select/Select.scss
@@ -25,8 +25,11 @@
     padding-right: 10px;
   }
   .MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline {
-    border-color: #007bff;
+    border-color: #becad6;
     border-width: 1px;
+  }
+  .MuiOutlinedInput-root:hover .MuiOutlinedInput-notchedOutline {
+    border-color: #becad6;
   }
 }
 @media screen and(min-width: '485px') {
