--- a/src/pages/OrderEdit/datePickerStyled.scss
+++ b/src/pages/OrderEdit/datePickerStyled.scss
@@ -1,12 +1,17 @@
 .react-datepicker__input-container {
+  width: 100%;
+  max-width: 100%;
   input {
-    border: 0;
-    border-bottom: 1px solid #999999;
+    border: 1px solid #c4c4c4;
+    border-radius: 4px;
+    height: 30px;
     width: 100%;
     text-indent: 8px;
     color: #121212;
-    font-size: 14px;
+    font-size: 11px;
     font-weight: 300;
+    box-sizing: border-box;
+    outline: none;
     &::placeholder {
       color: #999999;
       font-size: 14px;
@@ -43,7 +48,7 @@
 
 .react-datepicker__close-icon {
   &::after {
-    font-size: 20px;
+    font-size: 15px;
     color: #121212;
     background-color: transparent;
   }
@@ -93,6 +98,18 @@
 .react-datepicker-wrapper {
   width: 100%;
 }
+.react-datepicker__navigation {
+  .react-datepicker__navigation-icon.react-datepicker__navigation-icon--next {
+    font-size: 0;
+  }
+}
+
+@media screen and (min-width: 485px) {
+  .react-datepicker__input-container {
+    width: 100%;
+    max-width: 200px;
+  }
+}
 
 @media screen and (max-width: 450px) {
   .react-datepicker {
@@ -107,5 +124,10 @@
     .react-datepicker__time
     .react-datepicker__time-box {
     width: 70px;
+  }
+}
+@media screen and (min-width: 767px) {
+  .react-datepicker__input-container {
+    max-width: 100%;
   }
 }
