--- a/src/components/InputVsLabel/InputVsLabel.module.scss
+++ b/src/components/InputVsLabel/InputVsLabel.module.scss
@@ -10,16 +10,29 @@
   display: block;
 }
 .input {
-  border: 0.5px solid #becad6;
+  border: 0 !important;
   box-sizing: border-box;
-  border-radius: 3px;
   height: 29px;
   width: 100%;
+  &:focus {
+    border: 0px;
+  }
+  &:hover {
+    border: 0px;
+  }
   input {
+    border: 0.5px solid #becad6;
+    border-radius: 3px;
     text-indent: 11px;
     font-family: Helvetica;
     font-size: 11px;
     line-height: 11px;
     color: #3d5170;
+    &:hover {
+      border: 0.5px solid #9ba5af;
+    }
+    &:focus {
+      border: 0.5px solid #73b7ff;
+    }
   }
 }
