--- a/src/index.scss
+++ b/src/index.scss
@@ -69,6 +69,7 @@ code {
     width: 18px;
     height: 18px;
     cursor: pointer;
+    padding: 2.1px;
     a {
       font-size: 12px;
       line-height: 12px;
