--- a/src/pages/OrderEdit/datePickerStyled.scss
+++ b/src/pages/OrderEdit/datePickerStyled.scss
@@ -1,17 +1,40 @@
 .react-datepicker__input-container {
   width: 100%;
   max-width: 100%;
+  position: relative;
+  &::after {
+    content: '';
+    display: block;
+    position: absolute;
+    right: 11px;
+    top: 10px;
+    width: 12px;
+    height: 12px;
+    background: url(../../assets/image/datepicker-icon.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
   input {
-    border: 1px solid #c4c4c4;
+    border: 0.5px solid #c4c4c4;
     border-radius: 4px;
     height: 30px;
     width: 100%;
     text-indent: 8px;
-    color: #121212;
     font-size: 11px;
-    font-weight: 300;
+    line-height: 11px;
+    color: #3d5170;
+    // font-weight: 400;
     box-sizing: border-box;
     outline: none;
+    transition: all 0.3s ease;
+    font-family: Helvetica;
+    &:hover {
+      border: 0.5px solid #9ba5af;
+    }
+    &:focus {
+      border: 0.5px solid #73b7ff;
+    }
     &::placeholder {
       color: #999999;
       font-size: 14px;
@@ -47,6 +70,8 @@
 }
 
 .react-datepicker__close-icon {
+  top: 2px;
+  right: 14px;
   &::after {
     font-size: 15px;
     color: #121212;
@@ -102,8 +127,10 @@
   .react-datepicker__navigation-icon.react-datepicker__navigation-icon--next {
     font-size: 0;
   }
+  .react-datepicker__navigation-icon.react-datepicker__navigation-icon--previous {
+    font-size: 0;
+  }
 }
-
 @media screen and (min-width: 485px) {
   .react-datepicker__input-container {
     width: 100%;
