--- a/src/components/InputVsLabel/InputVsLabel.module.scss
+++ b/src/components/InputVsLabel/InputVsLabel.module.scss
@@ -1,6 +1,7 @@
 .wrap {
   margin-bottom: 15px;
   width: 100%;
+  position: relative;
 }
 .label {
   font-size: 11px;
@@ -35,4 +36,23 @@
       border: 0.5px solid #73b7ff;
     }
   }
+}
+
+.input.noValid {
+  input {
+    border: 0.5px solid #c4183c;
+    &:hover {
+      border: 0.5px solid #c4183c;
+    }
+    &:focus {
+      border: 0.5px solid #c4183c;
+    }
+  }
+}
+.errorMesage {
+  position: absolute;
+  left: 0;
+  bottom: -14px;
+  color: #c4183c;
+  font-size: 11px;
 }
